--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-page-scroller": "^3.0.1",
     "recharts": "^2.9.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^1.14.0",
